# wass

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  docker-compose.yml  meta.yaml
.github/workflows/: main.yml
Docker/: Dockerfile.runall  docker_bash.sh  docker_build.sh  docker_portainer.sh  docker_run.sh  settings.json  wass_auto_advance.sh  wass_docker_build.sh  wass_docker_run.sh  wass_docker_shell.sh  wass_runall.py  worksession.json
WASSjs/: Wass.js  dirscan.js  docker_entrypoint.sh  launch_wassjs.bat  package.json  run_as_daemon.sh  runtask.js  settings.json  spawn_shell.sh  testkue.js  utils.js  worksession.json
WASSjs/WassMonitor/: index.html  index.js
WASSjs/WassMonitor/css/: index.css  variables.less
WASSjs/ext/: .gitignore  launch_redis.bat  launch_redis.sh  redis.conf
autosync/: crosscorrelate.praat  wass_sync.py
cli/: README.md  pyproject.toml
cli/wasscli/: __init__.py  __main__.py  wasscli.py
doc/: README.md  docpad.coffee  package-lock.json  package.json  upload_to_server.sh
doc/src/layouts/: default.html.eco
doc/src/partials/: menu.html.eco
doc/src/render/: about.html.md  download.html.md  index.html.md  publications.html.md
doc/src/render/documentation/: configure.html.md  getting_started.html.md  index.html.md  install.html.md  matcher.html.md  running.html.md  stereo.html.md  testing.html.md
doc/src/static/css/: starter-template.css  theme.css  themepersonal.css
gridding/: .gitignore  BUILD.md  DCTInterpolator.py  IDWInterpolator.py  Pipfile  README.md  TFVariationalRefinement.py  environment.yml  netcdfoutput.py  pyproject.toml  wass_utils.py  wassgridsurface.py
gridding/wassgridsurface/: DCTInterpolator.py  IDWInterpolator.py  __init__.py  __main__.py  netcdfoutput.py  wass_utils.py  wassgridsurface.py
matlab/: load_camera_mesh.m  load_camera_mesh_and_align_plane.m  load_opencv_xml_matrix.m  plot_camera_as_ply.m  run_wass.m
postproc/: README.md  pyproject.toml
postproc/wasspost/: __init__.py  __main__.py  geometry.py  plotting.py  spectra.py  wasspost.py
src/: CMakeLists.txt
src/OpenSURF/: CMakeLists.txt  fasthessian.cpp  ipoint.cpp  ipoint.h
src/include/: log.hpp  utils.hpp  wassglobal.hpp.in
src/package_win32/: CMakeLists.txt  package-win32.cmake
src/wass_autocalibrate/: CMakeLists.txt  sba_driver.cpp  sba_driver.h  wass_autocalibrate.cpp
src/wass_lib/: CMakeLists.txt  epipolar.cpp  epipolar.h  hires_timer.cpp  triangulate.hpp
src/wass_match/: CMakeLists.txt  FeatureSet.cpp  FeatureSet.h  GTMatcher.cpp  GTMatcher.h  ImageFeature.hpp  gt.h  iidyn.cpp  wass_match.cpp
src/wass_prepare/: CMakeLists.txt  wass_prepare.cpp
src/wass_stereo/: CMakeLists.txt  PointPicker.hpp  PovMesh.cpp  PovMesh.h  hires_timer.cpp  hires_timer.h  render.hpp  stereorectify.cpp  stereorectify.h  triangulate.hpp  wass_stereo.cpp
test/: jpeg_compression_test.m  plot_sequence.m  run_test_docker.sh  test_pipeline.m  test_pipeline_norun.m  verify_matcher.m  verify_meshes.m
